5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1885_1296.log
== TEST (2019-07-09 10:55:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
v = array(eval(input("v: ")))

d = array[
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]]
d = d.T
e = zeros(3)
for i in dot(inv(v), d.T):
	
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[3], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
File "XXXX", line 13
    print("centurion:", round(v[0], 0))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:01:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array[
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]]

v = zeros(3)

v[i] = dot(inv(c), d.T)
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:02:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array[[
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]]]

v = zeros(3)

v[i] = dot(inv(c), d.T)
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:02:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array[[
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]]]

v = zeros(3)

v[i] = dot(inv(c), d.T)
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:05:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v[i] = dot(inv(c), d.T
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
File "XXXX", line 13
    print("centurion:", round(v[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:05:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(c), d.T
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
File "XXXX", line 14
    print("centurion:", round(v[0], 0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:07:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(c), d.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:08:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:09:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:10:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- EXECUTION TIME:
1.06208
-- TEST CASE 1:
---- input:
[8956,2700,1628]
---- correct output:
centurion: 150.0
tribune: 190.0
senator: 366.0
centurion
---- user output:
centurion: 150.0
tribune: 190.0
senator:
centurion
-- TEST CASE 2:
---- input:
[24642,7104,4218]
---- correct output:
centurion: 999.0
tribune: 777.0
senator: 555.0
senator
---- user output:
centurion: 999.0
tribune: 777.0
senator:
senator
-- TEST CASE 3:
---- input:
[19430,5548,3147]
---- correct output:
centurion: 1020.0
tribune: 111.0
senator: 635.0
tribune
---- user output:
centurion: 1020.0
tribune: 111.0
senator:
tribune
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(2)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:10:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(4)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3, dtype=float)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3, dtype=float)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:11:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3, dtype=float)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:"), round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- EXECUTION TIME:
1.19273
-- TEST CASE 1:
---- input:
[8956,2700,1628]
---- correct output:
centurion: 150.0
tribune: 190.0
senator: 366.0
centurion
---- user output:
centurion: 150.0
tribune: 190.0
senator:
centurion
-- TEST CASE 2:
---- input:
[24642,7104,4218]
---- correct output:
centurion: 999.0
tribune: 777.0
senator: 555.0
senator
---- user output:
c: centurion: 999.0
tribune: 777.0
senator:
senator
-- TEST CASE 3:
---- input:
[19430,5548,3147]
---- correct output:
centurion: 1020.0
tribune: 111.0
senator: 635.0
tribune
---- user output:
c: centurion: 1020.0
tribune: 111.0
senator:
tribune
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:11:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3, dtype=float)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:", round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
File "XXXX", line 18
    if v[0] == min(v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:12:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:", round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
File "XXXX", line 18
    if v[0] == min(v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:12:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:", round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
File "XXXX", line 18
    if v[0] == min(v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:12:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:", round(v[2], 0)

if v[0] == min(v):
	print("centurion")
elif v[1] == min(v):
	print("tribune")
elif v[2] == min(v):
	print("senator")
-- ERROR:
File "XXXX", line 18
    if v[0] == min(v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:13:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:", round(v[2], 0)

if (v[0] == min(v)):
	print("centurion")
elif (v[1] == min(v)):
	print("tribune")
elif (v[2] == min(v)):
	print("senator")
-- ERROR:
File "XXXX", line 18
    if (v[0] == min(v)):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:14:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:", round(v[2], 0))

if (v[0] == min(v)):
	print("centurion")
elif (v[1] == min(v)):
	print("tribune")
elif (v[2] == min(v)):
	print("senator")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:14:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
c = array(eval(input("c: ")))
i = 0
d = array([
	      [8,10,16],
	      [2,3,5],
	      [1,2,3]])

v = zeros(3)

v = dot(inv(d), c.T)
			  
print("centurion:", round(v[0], 0))
print("tribune:", round(v[1], 0))
print("senator:", round(v[2], 0))

if (v[0] == min(v)):
	print("centurion")
elif (v[1] == min(v)):
	print("tribune")
elif (v[2] == min(v)):
	print("senator")
-- EXECUTION TIME:
0.837653
-- TEST CASE 1:
---- input:
[8956,2700,1628]
---- correct output:
centurion: 150.0
tribune: 190.0
senator: 366.0
centurion
---- user output:
centurion: 150.0
tribune: 190.0
senator: 366.0
centurion
-- TEST CASE 2:
---- input:
[24642,7104,4218]
---- correct output:
centurion: 999.0
tribune: 777.0
senator: 555.0
senator
---- user output:
centurion: 999.0
tribune: 777.0
senator: 555.0
senator
-- TEST CASE 3:
---- input:
[19430,5548,3147]
---- correct output:
centurion: 1020.0
tribune: 111.0
senator: 635.0
tribune
---- user output:
centurion: 1020.0
tribune: 111.0
senator: 635.0
tribune
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
